--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,17 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_progress"
+        android:icon="@drawable/ic_insert_chart_black_24dp"
+        android:title="@string/title_progress" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_group"
+        android:icon="@drawable/ic_group_black_24dp"
+        android:title="@string/title_group" />
+    <item
+        android:id="@+id/navigation_reminder"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_reminder" />
 
 </menu>
