--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -5,48 +5,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.card.Add">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
         android:orientation="vertical"
         android:paddingTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view"
+            android:layout_width="match_parent"
+            android:layout_height="91dp"
+            android:padding="20dp"
+            app:cardCornerRadius="5sp">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/txt_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="Test"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/txtname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Aspirin"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/txt_count"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="Pill(s)"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.021"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_name" />
 
-        <TextView
-            android:id="@+id/txtcount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="pill(s)" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -121,124 +137,21 @@
             android:layout_below="@+id/textView1"
             android:layout_alignParentRight="true"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@android:color/darker_gray"
-            android:paddingBottom="10dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="10dp">
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="95dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingRight="5dp"
-                android:paddingBottom="10dp"
-                app:srcCompat="@drawable/remove" />
-
-            <Spinner
-                android:id="@+id/spinner1"
-                android:layout_width="363dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:minWidth="100dp"
-                android:paddingBottom="10dp"
-                android:spinnerMode="dropdown" />
-
-            <Spinner
-                android:id="@+id/spinner3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:paddingBottom="10dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="35dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:paddingTop="10dp"
-                android:paddingRight="2dp"
-                app:srcCompat="@drawable/clock" />
-
-            <TextView
-                android:id="@+id/txtaddreminder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp"
-                android:text="Add reminder time"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider3"
-            android:layout_width="fill_parent"
-            android:layout_height="0.5dp"
-            android:layout_below="@+id/textView1"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/darker_gray"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img3"
-                android:layout_width="wrap_content"
-                android:layout_height="34dp"
-                android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:paddingRight="2dp"
-                app:srcCompat="@drawable/calender" />
-
-            <TextView
-                android:id="@+id/txttime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:paddingLeft="12dp"
-                android:paddingTop="10dp"
-                android:text="Different times at the weekend"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider4"
-            android:layout_width="fill_parent"
-            android:layout_height="0.5dp"
-            android:layout_below="@+id/textView1"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/darker_gray"
-            android:paddingTop="10dp"
             android:paddingBottom="10dp" />
 
         <TextView
-            android:id="@+id/txtalsrmsetting"
+            android:id="@+id/txt_addreminder"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:text="Alarm Settings"
-            android:textColor="@android:color/black"
+            android:layout_height="44dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/btn_simple"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Add Reminder Time"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp" />
 
         <View
@@ -248,39 +161,29 @@
             android:layout_below="@+id/textView1"
             android:layout_alignParentRight="true"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@android:color/darker_gray"
             android:paddingTop="10dp"
             android:paddingBottom="10dp" />
 
-        <TextView
-            android:id="@+id/txtinventory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="50dp"
-            android:text="Inventory"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-        <Button
-            android:id="@+id/btnsave"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
-            android:scrollbarThumbHorizontal="@color/colorPrimaryDark"
-            android:scrollbarThumbVertical="@color/colorPrimaryDark"
-            android:text="Save"
-            android:textColor="@android:color/white" />
-        <View
-
-            android:layout_width="fill_parent"
-            android:layout_height="5dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/darker_gray"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp" />
     </LinearLayout>
 
-    </ScrollView>
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="48dp"
+        android:background="@drawable/btn_confirm"
+        android:text="Save"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="1.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
