--- a/app/src/main/res/layout/activity_addmedication.xml
+++ b/app/src/main/res/layout/activity_addmedication.xml
@@ -61,8 +61,8 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:background="@color/colorPrimaryDark"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/btn_confirm"
         android:shadowRadius="5"
         android:text="@string/next"
         android:textColor="@android:color/white"
@@ -70,7 +70,7 @@
         android:textColorHint="@color/colorPrimaryDark"
         android:textColorLink="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/drop_unit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
