--- a/app/src/main/res/layout/alert.xml
+++ b/app/src/main/res/layout/alert.xml
@@ -57,7 +57,7 @@
                 android:layout_width="32dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/measure_icon" />
+                app:srcCompat="@drawable/ic_camera_enhance_black_18dp" />
 
             <TextView
                 android:id="@+id/txt_measure"
