--- a/app/src/main/res/layout/alert.xml
+++ b/app/src/main/res/layout/alert.xml
@@ -29,11 +29,12 @@
             <ImageView
                 android:id="@+id/img_medication"
                 android:layout_width="32dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                app:srcCompat="@drawable/medication_icon" />
+                app:srcCompat="@drawable/ic_medical_services_24px"
+                tools:ignore="VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_medication"
@@ -57,7 +58,9 @@
                 android:layout_width="32dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_camera_enhance_black_18dp" />
+                android:padding="5dp"
+                app:srcCompat="@drawable/ic_show_chart_24px"
+                tools:ignore="VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_measure"
@@ -83,7 +86,8 @@
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                app:srcCompat="@drawable/activity_icon" />
+                app:srcCompat="@drawable/ic_directions_run_24px"
+                tools:ignore="VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_activity"
@@ -105,11 +109,12 @@
             <ImageView
                 android:id="@+id/img_sym"
                 android:layout_width="32dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                app:srcCompat="@drawable/sym_icon" />
+                app:srcCompat="@drawable/mood_icon"
+                tools:ignore="VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_sym"
