--- a/app/src/main/res/layout/activity_edit_mem_list.xml
+++ b/app/src/main/res/layout/activity_edit_mem_list.xml
@@ -30,21 +30,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_edit" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:clickable="true"
-        app:backgroundTint="@android:color/white"
+    <ImageView
+        android:id="@+id/img_del"
+        android:layout_width="41dp"
+        android:layout_height="38dp"
+
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintHorizontal_bias="0.956"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_gravity="right"
-        android:outlineAmbientShadowColor="@android:color/white"
-        android:outlineSpotShadowColor="@android:color/white"
-        app:rippleColor="@android:color/white"
-        app:srcCompat="@drawable/trash_icon" />
+        app:srcCompat="@drawable/ic_delete_24px"
+        tools:ignore="VectorDrawableCompat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
