--- a/app/src/main/res/layout/alert_addlog.xml
+++ b/app/src/main/res/layout/alert_addlog.xml
@@ -16,16 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <ImageView
             android:id="@+id/btn_closelog"
-            android:layout_width="wrap_content"
+            android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:clickable="true"
-            android:outlineAmbientShadowColor="@android:color/white"
-            android:outlineSpotShadowColor="@android:color/white"
-            app:backgroundTint="@android:color/white"
-            app:rippleColor="@android:color/white"
             app:srcCompat="@android:drawable/ic_delete" />
 
         <LinearLayout
@@ -38,7 +33,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/medication_icon" />
+                app:srcCompat="@drawable/ic_medical_services_24px"
+                tools:ignore="VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_medication"
@@ -68,7 +64,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/measure_icon" />
+                app:srcCompat="@drawable/ic_show_chart_24px"
+                tools:ignore="VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_measure"
@@ -99,7 +96,8 @@
                 android:layout_width="34dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/activity_icon" />
+                app:srcCompat="@drawable/ic_directions_run_24px"
+                tools:ignore="VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_activity"
@@ -130,7 +128,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/sym_icon" />
+                app:srcCompat="@drawable/ic_mood_24px"
+                tools:ignore="VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_sym"
