--- a/app/src/main/res/layout/cardview_group.xml
+++ b/app/src/main/res/layout/cardview_group.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:layout_margin="5dp"
@@ -8,7 +9,6 @@
     android:outlineSpotShadowColor="@color/colorPrimary"
     app:cardCornerRadius="5dp"
     app:cardElevation="2dp"
-    app:cardBackgroundColor="@color/colorPrimary"
     >
 
     <LinearLayout
@@ -23,7 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:scaleType="center"
-            app:srcCompat="@drawable/share_icon" />
+            app:srcCompat="@drawable/ic_share_black_24dp"
+            tools:ignore="VectorDrawableCompat" />
 
         <TextView
             android:id="@+id/txt_gtitle"
