--- a/app/src/main/res/layout/activity_addmedication.xml
+++ b/app/src/main/res/layout/activity_addmedication.xml
@@ -37,23 +37,25 @@
 
     <TextView
         android:id="@+id/txt_unit"
-        android:layout_width="83dp"
-        android:layout_height="19dp"
+        android:layout_width="92dp"
+        android:layout_height="22dp"
         android:layout_marginTop="28dp"
         android:text="Unit"
+        android:textColor="@color/Black"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.015"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_name" />
 
-    <Spinner
-        android:id="@+id/drop_unit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:spinnerMode="dropdown"
+    <TextView
+        android:id="@+id/txt_result"
+        android:layout_width="371dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_unit" />
 
@@ -61,7 +63,7 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="76dp"
         android:background="@drawable/btn_confirm"
         android:shadowRadius="5"
         android:text="@string/next"
@@ -70,7 +72,8 @@
         android:textColorHint="@color/colorPrimaryDark"
         android:textColorLink="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/drop_unit" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_result" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
