--- a/app/src/main/res/layout/cardview_group.xml
+++ b/app/src/main/res/layout/cardview_group.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
     android:layout_height="100dp"
-    android:layout_margin="5dp"
+    android:layout_margin="15dp"
     android:outlineAmbientShadowColor="@color/colorPrimary"
     android:outlineSpotShadowColor="@color/colorPrimary"
     app:cardCornerRadius="5dp"
-    app:cardElevation="2dp"
-    >
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
